# cast

./: .gitignore  .prettierrc.toml  Cargo.toml  LICENSE  README.md  TODO.md  build-cast.sh  cast.py  cast.spec  castValues.py  config.toml  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt
cmd/: autoUpdates.go  bios.go  cleanSystem.go  config.go  devTools.go  fix.go  passwordFeedback.go  root.go  tailscale.go  template  update.go  version.go
cmd/base/: __init__.py  age.py  authors.py  bios.go  bios.py  changelog.py  config.go  config.py  passwordFeedback.go  passwordFeedback.py  version.go  version.py
cmd/devtools/: go.go  rustup.go
cmd/experimental/: __init__.py  install.go  install.py  remove.py  search.py  test.py  update.go  update.py
cmd/fixes/: __init__.py  gmod.go  gmod.py  protonHang.go  protonHang.py
cmd/horizon/: __init__.py  dbox.go  dboxUbuntu.py
cmd/nova/: tailscale.go
cmd/packageManager/: __init__.py  install.py  remove.py  search.py  update.py
cmd/umbra/: __init__.py  bfc.go  gglobal.py  gpush.py  mcreator.go
components/: checkEnableDisableFlag.go
config/: config.go
examples/: config.toml
lib/: logger.go
src/: args.rs  main.rs  modules.rs  utils.rs
src/config/: get.rs  mod.rs  set.rs
src/modules/: auto_update.rs  bios.rs  clean_system.rs  dev.rs  fix.rs  horizon.rs  toggle_password.rs  toggle_password_feedback.rs  update.rs
src/utils/: image_check_utils.rs  is_cmd_installed.rs  (+3 more)
util/: checkEnableDisableFlag.go  config.go  logger.go
utils/: checkIfRoot.py  config.py  isCmdInstalled.py  isRoot.py  logger.py
(+10 files in other folders)
