[package]
name = "cast"
authors = ["Aethrexal <contact@aethrexal.dev>"]
description = "A custom tool for Umbra."
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["cargo", "derive", "string"] }
colored = "3.0.0"
directories = "6.0.0"
libc = "0.2.169"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
which = "7.0.2"
